2003-10-01  Richard Williamson   <rjw@apple.com>

	Fixed 3438441.  Pass extra info up to WebKit about load type, specifically is a load is triggered by JS running in an onLoad handler.

        Reviewed by Ken.

        * khtml/ecma/kjs_binding.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::openURL):
        (KWQKHTMLPart::openURLRequest):
        (KWQKHTMLPart::submitForm):
        (KWQKHTMLPart::urlSelected):
        * kwq/KWQKHTMLPartBrowserExtension.mm:
        (KHTMLPartBrowserExtension::createNewWindow):

        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge saveDocumentToPageCache]):
	Nothing changed.  Tweaked spacing.

2003-10-01  Chris Blumenberg  <cblu@apple.com>

	<rdar://problem/2942589>: CSS cursors are not implemented

        Reviewed by Dave.

        * Resources/eastCursor.tiff: Added.
        * Resources/eastResizeCursor.tiff: Added.
        * Resources/helpCursor.tiff: Added.
        * Resources/moveCursor.tiff: Added.
        * Resources/northEastResizeCursor.tiff: Added.
        * Resources/northResizeCursor.tiff: Added.
        * Resources/northWestResizeCursor.tiff: Added.
        * Resources/southEastResizeCursor.tiff: Added.
        * Resources/southResizeCursor.tiff: Added.
        * Resources/southWestResizeCursor.tiff: Added.
        * Resources/waitCursor.tiff: Added.
        * Resources/westResizeCursor.tiff: Added.
        * WebCore.pbproj/project.pbxproj:
        * khtml/css/cssparser.cpp: special-case the hand cursor to mean pointer
        (CSSParser::parseValue):
        * khtml/css/cssvalues.c: generated changes
        (hash_val):
        (findValue):
        * khtml/css/cssvalues.h: generated changes
        * khtml/css/cssvalues.in: removed the progress cursor from the list because it was messing up the mapping
        * khtml/khtmlview.cpp: call new cursor methods
        * kwq/KWQKCursor.h:
        * kwq/KWQKCursor.mm: