@@ -319,7 +319,7 @@ void RenderBlock::removeChild(RenderObject *oldChild)
     RenderObject* prev = oldChild->previousSibling();
     RenderObject* next = oldChild->nextSibling();
     bool mergedBlocks = false;
-    if (!isInline() && !oldChild->isInline() && !oldChild->continuation() &&
+    if (document()->renderer() && !isInline() && !oldChild->isInline() && !oldChild->continuation() &&
         prev && prev->isAnonymous() && prev->childrenInline() &&
         next && next->isAnonymous() && next->childrenInline()) {
         // Take all the children out of the |next| block and put them in
